[gd_scene load_steps=2 format=3 uid="uid://dja5ajysnsoi2"]

[ext_resource type="Script" path="res://src/utils/menu_item.gd" id="1_ibjbn"]

[node name="MenuItem" type="Node"]
script = ExtResource("1_ibjbn")
icon_modulate = Color(0, 0, 0, 1)

[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
